# deep-deer

./: .env.example  .gitignore  README.md  example_model_usage.py  frontend.html  improved_prompts.md  main.py  practice_RAG_App_main_fixed.py  pyproject.toml  requirements.txt  run.sh  test_api.py  test_folder_indexing.py  test_huggingface_integration.py  test_keyword_extraction.py  test_naver_direct.py  test_naver_search.py  test_qwen_integration.py  test_single_pdf.py  test_web_search.py
app/: __init__.py
app/api/v1/: health.py  idea.py  query.py  router.py  vector.py
app/core/: config.py  database.py
app/services/: embeddings.py  langchain_pipeline.py  llm_provider.py  nlq_processor.py  ollama_service.py  vector_store.py  web_search.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: ErrorAlert.vue  IdeaForm.vue  IdeaResults.vue  LoadingSpinner.vue
frontend/src/composables/: useApi.js
