[project]
name = "deep-deer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.4.0 ; python_full_version == '3.11.*'",
    "aiohttp==3.10.5 ; python_full_version == '3.11.*'",
    "aiosignal==1.3.1 ; python_full_version == '3.11.*'",
    "altair==5.4.1 ; python_full_version == '3.11.*'",
    "annotated-types==0.7.0 ; python_full_version == '3.11.*'",
    "anthropic==0.34.1 ; python_full_version == '3.11.*'",
    "antlr4-python3-runtime==4.9.3 ; python_full_version == '3.11.*'",
    "anyio==4.4.0 ; python_full_version == '3.11.*'",
    "appdirs==1.4.4 ; python_full_version == '3.11.*'",
    "appnope==0.1.4 ; python_full_version == '3.11.*' and sys_platform == 'darwin'",
    "argon2-cffi==23.1.0 ; python_full_version == '3.11.*'",
    "argon2-cffi-bindings==21.2.0 ; python_full_version == '3.11.*'",
    "arrow==1.3.0 ; python_full_version == '3.11.*'",
    "arxiv==2.1.3 ; python_full_version == '3.11.*'",
    "asgiref==3.8.1 ; python_full_version == '3.11.*'",
    "asttokens==2.4.1 ; python_full_version == '3.11.*'",
    "async-lru==2.0.4 ; python_full_version == '3.11.*'",
    "async-timeout==4.0.3 ; python_full_version >= '3.11' and python_full_version < '3.11.3'",
    "attrs==24.2.0 ; python_full_version == '3.11.*'",
    "babel==2.16.0 ; python_full_version == '3.11.*'",
    "backoff==2.2.1 ; python_full_version == '3.11.*'",
    "bcrypt==4.2.0 ; python_full_version == '3.11.*'",
    "beautifulsoup4==4.12.3 ; python_full_version == '3.11.*'",
    "bleach==6.1.0 ; python_full_version == '3.11.*'",
    "blinker==1.8.2 ; python_full_version == '3.11.*'",
    "boto3==1.35.10 ; python_full_version == '3.11.*'",
    "botocore==1.35.10 ; python_full_version == '3.11.*'",
    "build==1.2.1 ; python_full_version == '3.11.*'",
    "cachetools==5.5.0 ; python_full_version == '3.11.*'",
    "certifi==2024.8.30 ; python_full_version == '3.11.*'",
    "cffi==1.17.0 ; python_full_version == '3.11.*'",
    "chardet==5.2.0 ; python_full_version == '3.11.*'",
    "charset-normalizer==3.3.2 ; python_full_version == '3.11.*'",
    "chroma-hnswlib==0.7.3 ; python_full_version == '3.11.*'",
    "chromadb==0.4.24 ; python_full_version == '3.11.*'",
    "click==8.1.7 ; python_full_version == '3.11.*'",
    "cohere==5.9.0 ; python_full_version == '3.11.*'",
    "colorama==0.4.6 ; (python_full_version == '3.11.*' and os_name == 'nt') or (python_full_version == '3.11.*' and sys_platform == 'win32')",
    "coloredlogs==15.0.1 ; python_full_version == '3.11.*'",
    "comm==0.2.2 ; python_full_version == '3.11.*'",
    "contourpy==1.3.0 ; python_full_version == '3.11.*'",
    "cryptography==43.0.0 ; python_full_version == '3.11.*'",
    "cycler==0.12.1 ; python_full_version == '3.11.*'",
    "dataclasses-json==0.6.7 ; python_full_version == '3.11.*'",
    "datasets==2.21.0 ; python_full_version == '3.11.*'",
    "debugpy==1.8.5 ; python_full_version == '3.11.*'",
    "decorator==5.1.1 ; python_full_version == '3.11.*'",
    "deepl==1.18.0 ; python_full_version == '3.11.*'",
    "defusedxml==0.7.1 ; python_full_version == '3.11.*'",
    "deprecated==1.2.14 ; python_full_version == '3.11.*'",
    "dill==0.3.8 ; python_full_version == '3.11.*'",
    "dirtyjson==1.0.8 ; python_full_version == '3.11.*'",
    "distro==1.9.0 ; python_full_version == '3.11.*'",
    "docx2txt==0.8 ; python_full_version == '3.11.*'",
    "ebooklib==0.18 ; python_full_version == '3.11.*'",
    "effdet==0.4.1 ; python_full_version == '3.11.*'",
    "elastic-transport==8.15.0 ; python_full_version == '3.11.*'",
    "elasticsearch[vectorstore-mmr]==8.15.0 ; python_full_version == '3.11.*'",
    "emoji==2.12.1 ; python_full_version == '3.11.*'",
    "environs==9.5.0 ; python_full_version == '3.11.*'",
    "et-xmlfile==1.1.0 ; python_full_version == '3.11.*'",
    "executing==2.0.1 ; python_full_version == '3.11.*'",
    "faiss-cpu==1.8.0.post1 ; python_full_version == '3.11.*'",
    "fastapi==0.112.2 ; python_full_version == '3.11.*'",
    "fastavro==1.9.5 ; python_full_version == '3.11.*'",
    "fastjsonschema==2.20.0 ; python_full_version == '3.11.*'",
    "feedparser==6.0.11 ; python_full_version == '3.11.*'",
    "filelock==3.15.4 ; python_full_version == '3.11.*'",
    "filetype==1.2.0 ; python_full_version == '3.11.*'",
    "flashrank==0.2.9 ; python_full_version == '3.11.*'",
    "flatbuffers==24.3.25 ; python_full_version == '3.11.*'",
    "fonttools==4.53.1 ; python_full_version == '3.11.*'",
    "fqdn==1.5.1 ; python_full_version == '3.11.*'",
    "frozenlist==1.4.1 ; python_full_version == '3.11.*'",
    "fsspec[http]==2024.6.1 ; python_full_version == '3.11.*'",
    "ftfy==6.2.3 ; python_full_version == '3.11.*'",
    "gitdb==4.0.11 ; python_full_version == '3.11.*'",
    "gitpython==3.1.43 ; python_full_version == '3.11.*'",
    "google-ai-generativelanguage==0.6.6 ; python_full_version == '3.11.*'",
    "google-api-core[grpc]==1.34.1 ; python_full_version == '3.11.*'",
    "google-api-python-client==2.143.0 ; python_full_version == '3.11.*'",
    "google-auth==2.34.0 ; python_full_version == '3.11.*'",
    "google-auth-httplib2==0.2.0 ; python_full_version == '3.11.*'",
    "google-generativeai==0.7.2 ; python_full_version == '3.11.*'",
    "google-search-results==2.4.2 ; python_full_version == '3.11.*'",
    "googleapis-common-protos==1.65.0 ; python_full_version == '3.11.*'",
    "grandalf==0.8 ; python_full_version == '3.11.*'",
    "greenlet==3.0.3 ; python_full_version == '3.11.*'",
    "grpc-gateway-protoc-gen-openapiv2==0.1.0 ; python_full_version == '3.11.*'",
    "grpcio==1.66.1 ; python_full_version == '3.11.*'",
    "grpcio-status==1.48.2 ; python_full_version == '3.11.*'",
    "h11==0.14.0 ; python_full_version == '3.11.*'",
    "httpcore==1.0.5 ; python_full_version == '3.11.*'",
    "httplib2==0.22.0 ; python_full_version == '3.11.*'",
    "httptools==0.6.1 ; python_full_version == '3.11.*'",
    "httpx==0.27.2 ; python_full_version == '3.11.*'",
    "httpx-sse==0.4.0 ; python_full_version == '3.11.*'",
    "huggingface-hub==0.23.5 ; python_full_version == '3.11.*'",
    "humanfriendly==10.0 ; python_full_version == '3.11.*'",
    "idna==3.8 ; python_full_version == '3.11.*'",
    "importlib-metadata==8.4.0 ; python_full_version == '3.11.*'",
    "importlib-resources==6.4.4 ; python_full_version == '3.11.*'",
    "iopath==0.1.10 ; python_full_version == '3.11.*'",
    "ipykernel==6.29.5 ; python_full_version == '3.11.*'",
    "ipython==8.27.0 ; python_full_version == '3.11.*'",
    "ipywidgets==8.1.5 ; python_full_version == '3.11.*'",
    "isoduration==20.11.0 ; python_full_version == '3.11.*'",
    "jedi==0.19.1 ; python_full_version == '3.11.*'",
    "jinja2==3.1.4 ; python_full_version == '3.11.*'",
    "jiter==0.5.0 ; python_full_version == '3.11.*'",
    "jmespath==1.0.1 ; python_full_version == '3.11.*'",
    "joblib==1.4.2 ; python_full_version == '3.11.*'",
    "jpype1==1.5.0 ; python_full_version == '3.11.*'",
    "json5==0.9.25 ; python_full_version == '3.11.*'",
    "jsonpatch==1.33 ; python_full_version == '3.11.*'",
    "jsonpointer==3.0.0 ; python_full_version == '3.11.*'",
    "jsonschema[format-nongpl]==4.23.0 ; python_full_version == '3.11.*'",
    "jsonschema-specifications==2023.12.1 ; python_full_version == '3.11.*'",
    "jupyter-client==8.6.2 ; python_full_version == '3.11.*'",
    "jupyter-console==6.6.3 ; python_full_version == '3.11.*'",
    "jupyter-core==5.7.2 ; python_full_version == '3.11.*'",
    "jupyter-events==0.10.0 ; python_full_version == '3.11.*'",
    "jupyter-lsp==2.2.5 ; python_full_version == '3.11.*'",
    "jupyter-server-terminals==0.5.3 ; python_full_version == '3.11.*'",
    "jupyter-server==2.14.2 ; python_full_version == '3.11.*'",
    "jupyter==1.1.1 ; python_full_version == '3.11.*'",
    "jupyterlab-pygments==0.3.0 ; python_full_version == '3.11.*'",
    "jupyterlab-server==2.27.3 ; python_full_version == '3.11.*'",
    "jupyterlab-widgets==3.0.13 ; python_full_version == '3.11.*'",
    "jupyterlab==4.2.5 ; python_full_version == '3.11.*'",
    "kiwipiepy-model==0.17.0 ; python_full_version == '3.11.*'",
    "kiwipiepy==0.17.1 ; python_full_version == '3.11.*'",
    "kiwisolver==1.4.5 ; python_full_version == '3.11.*'",
    "konlpy==0.6.0 ; python_full_version == '3.11.*'",
    "kubernetes==30.1.0 ; python_full_version == '3.11.*'",
    "langchain-anthropic==0.1.23 ; python_full_version == '3.11.*'",
    "langchain-chroma==0.1.3 ; python_full_version == '3.11.*'",
    "langchain-cohere==0.1.9 ; python_full_version == '3.11.*'",
    "langchain-community==0.2.15 ; python_full_version == '3.11.*'",
    "langchain-core==0.2.37 ; python_full_version == '3.11.*'",
    "langchain-elasticsearch==0.2.2 ; python_full_version == '3.11.*'",
    "langchain-experimental==0.0.61 ; python_full_version == '3.11.*'",
    "langchain-google-genai==1.0.10 ; python_full_version == '3.11.*'",
    "langchain-huggingface==0.0.3 ; python_full_version == '3.11.*'",
    "langchain-milvus==0.1.4 ; python_full_version == '3.11.*'",
    "langchain-openai==0.1.23 ; python_full_version == '3.11.*'",
    "langchain-teddynote==0.0.28 ; python_full_version == '3.11.*'",
    "langchain-text-splitters==0.2.2 ; python_full_version == '3.11.*'",
    "langchain-upstage==0.1.8 ; python_full_version == '3.11.*'",
    "langchain==0.2.15 ; python_full_version == '3.11.*'",
    "langchainhub==0.1.21 ; python_full_version == '3.11.*'",
    "langdetect==1.0.9 ; python_full_version == '3.11.*'",
    "langgraph==0.0.69 ; python_full_version == '3.11.*'",
    "langsmith==0.1.108 ; python_full_version == '3.11.*'",
    "lark==1.2.2 ; python_full_version == '3.11.*'",
    "layoutparser[layoutmodels,tesseract]==0.3.4 ; python_full_version == '3.11.*'",
    "llama-index-core==0.10.68.post1 ; python_full_version == '3.11.*'",
    "llama-index-readers-file==0.1.33 ; python_full_version == '3.11.*'",
    "llama-parse==0.4.9 ; python_full_version == '3.11.*'",
    "lxml==5.3.0 ; python_full_version == '3.11.*'",
    "lz4==4.3.3 ; python_full_version == '3.11.*'",
    "markdown-it-py==3.0.0 ; python_full_version == '3.11.*'",
    "markdown==3.7 ; python_full_version == '3.11.*'",
    "markupsafe==2.1.5 ; python_full_version == '3.11.*'",
    "marshmallow==3.22.0 ; python_full_version == '3.11.*'",
    "matplotlib-inline==0.1.7 ; python_full_version == '3.11.*'",
    "matplotlib==3.9.2 ; python_full_version == '3.11.*'",
    "mdurl==0.1.2 ; python_full_version == '3.11.*'",
    "milvus-lite==2.4.9 ; python_full_version == '3.11.*' and sys_platform != 'win32'",
    "mistune==3.0.2 ; python_full_version == '3.11.*'",
    "mmh3==4.1.0 ; python_full_version == '3.11.*'",
    "monotonic==1.6 ; python_full_version == '3.11.*'",
    "mpmath==1.3.0 ; python_full_version == '3.11.*'",
    "msg-parser==1.2.0 ; python_full_version == '3.11.*'",
    "multidict==6.0.5 ; python_full_version == '3.11.*'",
    "multiprocess==0.70.16 ; python_full_version == '3.11.*'",
    "mypy-extensions==1.0.0 ; python_full_version == '3.11.*'",
    "narwhals==1.6.0 ; python_full_version == '3.11.*'",
    "nbclient==0.10.0 ; python_full_version == '3.11.*'",
    "nbconvert==7.16.4 ; python_full_version == '3.11.*'",
    "nbformat==5.10.4 ; python_full_version == '3.11.*'",
    "nest-asyncio==1.6.0 ; python_full_version == '3.11.*'",
    "networkx==3.3 ; python_full_version == '3.11.*'",
    "nltk==3.9.1 ; python_full_version == '3.11.*'",
    "notebook-shim==0.2.4 ; python_full_version == '3.11.*'",
    "notebook==7.2.2 ; python_full_version == '3.11.*'",
    "numpy==1.26.4 ; python_full_version == '3.11.*'",
    "nvidia-cublas-cu12==12.1.3.1 ; python_full_version == '3.11.*' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-cupti-cu12==12.1.105 ; python_full_version == '3.11.*' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-nvrtc-cu12==12.1.105 ; python_full_version == '3.11.*' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-runtime-cu12==12.1.105 ; python_full_version == '3.11.*' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cudnn-cu12==8.9.2.26 ; python_full_version == '3.11.*' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cufft-cu12==11.0.2.54 ; python_full_version == '3.11.*' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-curand-cu12==10.3.2.106 ; python_full_version == '3.11.*' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusolver-cu12==11.4.5.107 ; python_full_version == '3.11.*' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparse-cu12==12.1.0.106 ; python_full_version == '3.11.*' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nccl-cu12==2.19.3 ; python_full_version == '3.11.*' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvjitlink-cu12==12.6.68 ; python_full_version == '3.11.*' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvtx-cu12==12.1.105 ; python_full_version == '3.11.*' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "oauthlib==3.2.2 ; python_full_version == '3.11.*'",
    "olefile==0.47 ; python_full_version == '3.11.*'",
    "omegaconf==2.3.0 ; python_full_version == '3.11.*'",
    "onnx==1.14.1 ; python_full_version == '3.11.*'",
    "onnxruntime==1.19.0 ; python_full_version == '3.11.*'",
    "open-clip-torch==2.26.1 ; python_full_version == '3.11.*'",
    "openai==1.43.0 ; python_full_version == '3.11.*'",
    "opencv-python==4.10.0.84 ; python_full_version == '3.11.*'",
    "openpyxl==3.1.5 ; python_full_version == '3.11.*'",
    "opentelemetry-api==1.27.0 ; python_full_version == '3.11.*'",
    "opentelemetry-exporter-otlp-proto-common==1.27.0 ; python_full_version == '3.11.*'",
    "opentelemetry-exporter-otlp-proto-grpc==1.27.0 ; python_full_version == '3.11.*'",
    "opentelemetry-instrumentation-asgi==0.48b0 ; python_full_version == '3.11.*'",
    "opentelemetry-instrumentation-fastapi==0.48b0 ; python_full_version == '3.11.*'",
    "opentelemetry-instrumentation==0.48b0 ; python_full_version == '3.11.*'",
    "opentelemetry-proto==1.27.0 ; python_full_version == '3.11.*'",
    "opentelemetry-sdk==1.27.0 ; python_full_version == '3.11.*'",
    "opentelemetry-semantic-conventions==0.48b0 ; python_full_version == '3.11.*'",
    "opentelemetry-util-http==0.48b0 ; python_full_version == '3.11.*'",
    "orjson==3.10.7 ; python_full_version == '3.11.*'",
    "overrides==7.7.0 ; python_full_version == '3.11.*'",
    "packaging==24.1 ; python_full_version == '3.11.*'",
    "pandas==2.2.2 ; python_full_version == '3.11.*'",
    "pandocfilters==1.5.1 ; python_full_version == '3.11.*'",
    "parameterized==0.9.0 ; python_full_version == '3.11.*'",
    "parso==0.8.4 ; python_full_version == '3.11.*'",
    "pdf2image==1.17.0 ; python_full_version == '3.11.*'",
    "pdfminer-six==20231228 ; python_full_version == '3.11.*'",
    "pdfplumber==0.11.4 ; python_full_version == '3.11.*'",
    "pexpect==4.9.0 ; python_full_version == '3.11.*' and sys_platform != 'emscripten' and sys_platform != 'win32'",
    "pillow==10.4.0 ; python_full_version == '3.11.*'",
    "pinecone-client[grpc]==3.2.2 ; python_full_version == '3.11.*'",
    "pinecone-text==0.9.0 ; python_full_version == '3.11.*'",
    "platformdirs==4.2.2 ; python_full_version == '3.11.*'",
    "portalocker==2.10.1 ; python_full_version == '3.11.*'",
    "posthog==3.6.0 ; python_full_version == '3.11.*'",
    "prometheus-client==0.20.0 ; python_full_version == '3.11.*'",
    "prompt-toolkit==3.0.47 ; python_full_version == '3.11.*'",
    "proto-plus==1.24.0 ; python_full_version == '3.11.*'",
    "protobuf==3.20.3 ; python_full_version == '3.11.*'",
    "psutil==6.0.0 ; python_full_version == '3.11.*'",
    "ptyprocess==0.7.0 ; (python_full_version == '3.11.*' and os_name != 'nt') or (python_full_version == '3.11.*' and sys_platform != 'emscripten' and sys_platform != 'win32')",
    "pulsar-client==3.5.0 ; python_full_version == '3.11.*'",
    "pure-eval==0.2.3 ; python_full_version == '3.11.*'",
    "pyarrow==17.0.0 ; python_full_version == '3.11.*'",
    "pyasn1-modules==0.4.0 ; python_full_version == '3.11.*'",
    "pyasn1==0.6.0 ; python_full_version == '3.11.*'",
    "pyclipper==1.3.0.post5 ; python_full_version == '3.11.*'",
    "pycocotools==2.0.8 ; python_full_version == '3.11.*'",
    "pycparser==2.22 ; python_full_version == '3.11.*'",
    "pydantic-core==2.23.2 ; python_full_version == '3.11.*'",
    "pydantic==2.9.0 ; python_full_version == '3.11.*'",
    "pydeck==0.9.1 ; python_full_version == '3.11.*'",
    "pygments==2.18.0 ; python_full_version == '3.11.*'",
    "pymilvus==2.4.6 ; python_full_version == '3.11.*'",
    "pymupdf4llm==0.0.12 ; python_full_version == '3.11.*'",
    "pymupdf==1.24.9 ; python_full_version == '3.11.*'",
    "pymupdfb==1.24.9 ; python_full_version == '3.11.*'",
    "pypandoc==1.13 ; python_full_version == '3.11.*'",
    "pyparsing==3.1.4 ; python_full_version == '3.11.*'",
    "pypdf==4.3.1 ; python_full_version == '3.11.*'",
    "pypdfium2==4.30.0 ; python_full_version == '3.11.*'",
    "pypika==0.48.9 ; python_full_version == '3.11.*'",
    "pyproject-hooks==1.1.0 ; python_full_version == '3.11.*'",
    "pyreadline3==3.4.1 ; python_full_version == '3.11.*' and sys_platform == 'win32'",
    "pysbd==0.3.4 ; python_full_version == '3.11.*'",
    "pytesseract==0.3.13 ; python_full_version == '3.11.*'",
    "python-dateutil==2.9.0.post0 ; python_full_version == '3.11.*'",
    "python-docx==1.1.2 ; python_full_version == '3.11.*'",
    "python-dotenv==1.0.1 ; python_full_version == '3.11.*'",
    "python-iso639==2024.4.27 ; python_full_version == '3.11.*'",
    "python-json-logger==2.0.7 ; python_full_version == '3.11.*'",
    "python-magic==0.4.27 ; python_full_version == '3.11.*'",
    "python-multipart==0.0.9 ; python_full_version == '3.11.*'",
    "python-pptx==0.6.21 ; python_full_version == '3.11.*'",
    "pytz==2024.1 ; python_full_version == '3.11.*'",
    "pywin32==306 ; python_full_version == '3.11.*' and sys_platform == 'win32'",
    "pywinpty==2.0.13 ; python_full_version == '3.11.*' and os_name == 'nt'",
    "pyyaml==6.0.2 ; python_full_version == '3.11.*'",
    "pyzmq==26.2.0 ; python_full_version == '3.11.*'",
    "ragas==0.1.15 ; python_full_version == '3.11.*'",
    "rank-bm25==0.2.2 ; python_full_version == '3.11.*'",
    "rapidfuzz==3.9.6 ; python_full_version == '3.11.*'",
    "rapidocr-onnxruntime==1.3.24 ; python_full_version == '3.11.*'",
    "redis==5.0.8 ; python_full_version == '3.11.*'",
    "referencing==0.35.1 ; python_full_version == '3.11.*'",
    "regex==2024.7.24 ; python_full_version == '3.11.*'",
    "requests-oauthlib==2.0.0 ; python_full_version == '3.11.*'",
    "requests==2.32.3 ; python_full_version == '3.11.*'",
    "rfc3339-validator==0.1.4 ; python_full_version == '3.11.*'",
    "rfc3986-validator==0.1.1 ; python_full_version == '3.11.*'",
    "rich==13.8.0 ; python_full_version == '3.11.*'",
    "rpds-py==0.20.0 ; python_full_version == '3.11.*'",
    "rsa==4.9 ; python_full_version == '3.11.*'",
    "s3transfer==0.10.2 ; python_full_version == '3.11.*'",
    "safetensors==0.4.4 ; python_full_version == '3.11.*'",
    "scikit-learn==1.5.1 ; python_full_version == '3.11.*'",
    "scipy==1.14.1 ; python_full_version == '3.11.*'",
    "seaborn==0.13.2 ; python_full_version == '3.11.*'",
    "send2trash==1.8.3 ; python_full_version == '3.11.*'",
    "sentence-transformers==3.0.1 ; python_full_version == '3.11.*'",
    "setuptools==74.0.0 ; python_full_version == '3.11.*'",
    "sgmllib3k==1.0.0 ; python_full_version == '3.11.*'",
    "shapely==2.0.6 ; python_full_version == '3.11.*'",
    "shellingham==1.5.4 ; python_full_version == '3.11.*'",
    "simsimd==5.0.1 ; python_full_version == '3.11.*'",
    "six==1.16.0 ; python_full_version == '3.11.*'",
    "smmap==5.0.1 ; python_full_version == '3.11.*'",
    "sniffio==1.3.1 ; python_full_version == '3.11.*'",
    "soupsieve==2.6 ; python_full_version == '3.11.*'",
    "sqlalchemy[asyncio]==2.0.32 ; python_full_version == '3.11.*'",
    "stack-data==0.6.3 ; python_full_version == '3.11.*'",
    "starlette==0.38.2 ; python_full_version == '3.11.*'",
    "streamlit==1.38.0 ; python_full_version == '3.11.*'",
    "striprtf==0.0.26 ; python_full_version == '3.11.*'",
    "sympy==1.13.2 ; python_full_version == '3.11.*'",
    "tabulate==0.9.0 ; python_full_version == '3.11.*'",
    "tenacity==8.3.0 ; python_full_version == '3.11.*'",
    "terminado==0.18.1 ; python_full_version == '3.11.*'",
    "threadpoolctl==3.5.0 ; python_full_version == '3.11.*'",
    "tiktoken==0.7.0 ; python_full_version == '3.11.*'",
    "timm==1.0.9 ; python_full_version == '3.11.*'",
    "tinycss2==1.3.0 ; python_full_version == '3.11.*'",
    "tokenizers==0.19.1 ; python_full_version == '3.11.*'",
    "toml==0.10.2 ; python_full_version == '3.11.*'",
    "torch==2.2.2 ; python_full_version == '3.11.*'",
    "torchvision==0.17.2 ; python_full_version == '3.11.*'",
    "tornado==6.4.1 ; python_full_version == '3.11.*'",
    "tqdm==4.66.5 ; python_full_version == '3.11.*'",
    "traitlets==5.14.3 ; python_full_version == '3.11.*'",
    "transformers==4.44.2 ; python_full_version == '3.11.*'",
    "triton==2.2.0 ; python_full_version == '3.11.*' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "typer==0.12.5 ; python_full_version == '3.11.*'",
    "types-python-dateutil==2.9.0.20240821 ; python_full_version == '3.11.*'",
    "types-requests==2.32.0.20240712 ; python_full_version == '3.11.*'",
    "typing-extensions==4.12.2 ; python_full_version == '3.11.*'",
    "typing-inspect==0.9.0 ; python_full_version == '3.11.*'",
    "tzdata==2024.1 ; python_full_version == '3.11.*'",
    "ujson==5.10.0 ; python_full_version == '3.11.*'",
    "unstructured-inference==0.6.6 ; python_full_version == '3.11.*'",
    "unstructured-pytesseract==0.3.13 ; python_full_version == '3.11.*'",
    "unstructured[all-docs]==0.10.19 ; python_full_version == '3.11.*'",
    "uri-template==1.3.0 ; python_full_version == '3.11.*'",
    "uritemplate==4.1.1 ; python_full_version == '3.11.*'",
    "urllib3==2.2.2 ; python_full_version == '3.11.*'",
    "uvicorn[standard]==0.30.6 ; python_full_version == '3.11.*'",
    "uvloop==0.20.0 ; python_full_version == '3.11.*' and platform_python_implementation != 'PyPy' and sys_platform != 'cygwin' and sys_platform != 'win32'",
    "watchdog==4.0.2 ; python_full_version == '3.11.*' and sys_platform != 'darwin'",
    "watchfiles==0.24.0 ; python_full_version == '3.11.*'",
    "wcwidth==0.2.13 ; python_full_version == '3.11.*'",
    "webcolors==24.8.0 ; python_full_version == '3.11.*'",
    "webencodings==0.5.1 ; python_full_version == '3.11.*'",
    "websocket-client==1.8.0 ; python_full_version == '3.11.*'",
    "websockets==13.0.1 ; python_full_version == '3.11.*'",
    "wget==3.2 ; python_full_version == '3.11.*'",
    "widgetsnbextension==4.0.13 ; python_full_version == '3.11.*'",
    "wrapt==1.16.0 ; python_full_version == '3.11.*'",
    "xlrd==2.0.1 ; python_full_version == '3.11.*'",
    "xlsxwriter==3.2.0 ; python_full_version == '3.11.*'",
    "xxhash==3.5.0 ; python_full_version == '3.11.*'",
    "yarl==1.9.6 ; python_full_version == '3.11.*'",
    "zipp==3.20.1 ; python_full_version == '3.11.*'",
    "pydantic-settings>=2.11.0",
    "aiosqlite>=0.21.0",
    "python-multipart>=0.0.9",
    "pypdf>=4.3.1",
    "docx2txt>=0.8",
    "langchain-unstructured>=0.1.2",
    "duckduckgo-search>=7.2.1",
]
